# astrid

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  scratch_gemma_demo.py  scratch_name_natural.py  scratch_name_prompts.py  scratch_prompt_a_samples.py  scratch_prompt_variants.py  задачи.txt
.cursor/rules/: about-me.mdc  astra-knowledge-vault.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_places_and_profile_fk.py  003_places_search_text_trgm.py  004_predictions_drop_accuracy_percent.py  005_natal_charts_and_prediction_context.py
astra-vault/.obsidian/: graph.json  workspace.json
astra-vault/00-home/: index.md  обо мне.md  текущие приоритеты.md
astra-vault/atlas/: деплой пока не настроен.md  (+3 more)
scripts/: check-telegram-bot.sh  docker-up.sh  e2e_astrid_v3.py  generate_monetization_pdf.py  generate_sota_report_pdf.py  import_geonames_ru.py  mihomo-telegram-setup.md  smoke_astrid_v3.py  vless-sub-to-clash.py
spec/: README.md  backlog.md  project.md
tests/: conftest.py  test_astrid_prompt.py  test_astrid_v3_e2e.py  test_astro_service.py  test_astro_templates.py  test_geolocation.py  test_geonames_import.py  test_health.py  test_messaging_schemas.py  test_onboarding_service.py  test_places_normalize.py  test_places_russian_names.py  test_prediction_generation.py  test_prediction_service.py  test_profile_accuracy.py  test_profile_text.py  test_ru_admin1_codes.py  test_ru_inflect.py  test_sentry.py  test_utils.py  test_webapp.py
(+134 files in other folders)
