[project]
name = "astra"
version = "0.1.0"
description = "Astra — персональные предсказания в Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "aiohttp-socks>=0.10.0",
    "aiogram>=3.17.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
astra-api = "astra.main:run"
astra-worker = "astra.workers.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["astra"]
omit = ["*/tests/*"]
